--- a/index.html
+++ b/index.html
@@ -554,6 +554,7 @@ function parsePCLTTable()
                            capHeight, symbolSet, typeface, characterComplement, fileName, strokeWeight,
                            widthType, serifStyle, reserved };
   
+  return true;
 }
 
 function parse()
